# nns-vesl

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  README.md  out.jam  vesl.toml
.cargo/: config.toml
docs/: CONSENSUS.md  PROOF_STORAGE.md  ROADMAP.md  claim-note-wallet-support.md  nns_architecture_roadmap.md  nockchain-fork-for-nns.md  path-y-integration-test-plan.md  running_a_node.md  wallet-verification.md
docs/research/: recursive-payment-proof.md
hoon/: dat  jams
hoon/app/: app.hoon
hoon/common/: nock-verifier.hoon  stark  v0-v1  v2  zoon.hoon
hoon/lib/: nns-accumulator.hoon  nns-predicates.hoon  tx-witness.hoon  vesl-graft.hoon  vesl-merkle.hoon  vesl-prover.hoon  vesl-stark-verifier.hoon  vesl-verifier.hoon
hoon/tests/: names.hoon
scripts/: setup-hoon-tree.sh
src/: api.rs  chain.rs  chain_follower.rs  claim_note.rs  config.rs  freshness.rs  kernel.rs  lib.rs  main.rs  packed_blob.rs  payment.rs  state.rs  types.rs  wallet_y4.rs
tests/: handlers.rs  phase2_anchor.rs  phase3_predicates.rs  phase7_light_verify.rs  phase7_two_servers.rs  prover.rs
